--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
-<img src="/banner.jpg" 
+<img src="/banner.gif" 
 alt="img-banner"
 class="h-48 w-full object-cover">
 
-<h1 class="text-white font-bold text-3xl my-5">Soy Anabel Huanca Moreano 👋</h1>
+<h1 class="text-white font-bold text-3xl my-5">Hola mundo! Soy Anabel Huanca Moreano 👋</h1>
