--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,28 +10,27 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Portafolio wordpress" />
+		<meta name="author" content="anabelHumor">
+		<meta name="description" content="Portafolio WordPress" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="robots" content="index, follow">
+	<!-- OPEN GRAPH -->
+	<meta property="og:title" content="Portafolio WordPress - Anabel Huanca Moreano @anabelhumor">
+<!-- 	<meta property="og:image" content="/portafolio.JPG">
+	<meta property="og:image:alt" content="Una captura de mi portafolio"> -->
+
 		<title>{title}</title>
 	</head>
 	<body>
-		<div class="absolute top-0 z-[-2] h-screen w-screen bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"></div>
+		
 		<slot />
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+	:root{
+		theme: light dark;
 	}
 	html {
 		font-family: system-ui, sans-serif;
@@ -41,6 +40,8 @@ const { title } = Astro.props;
 		display: flex;
 		flex-direction: column;
 		height: 100vh;
+		background-color: #00091d;
+		
 	}
 
 </style>
