--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,21 @@
-<footer class="py-10 text-white text-center text-wrap">
+<div class="grid grid-cols-3 text-gray-500 py-2 text-wrap">
+    <div class="text-center">
+        <a href="mailto:anabel.humor@gmail.com" class="hover:underline hover:font-medium" target="_blank">
+            Escríbeme
+        </a>
+    </div>
+    <div class="text-center">
+        <a href="https://drive.google.com/file/d/1PekjlEGZPUk0E_a4sCriDcEL9vLmDbkO/view?usp=sharing" class="hover:underline hover:font-medium" target="_blank">
+            Ver CV
+        </a>
+    </div>
+    <div class="text-center">
+        <a href="https://social-anabelhumor.vercel.app/" class="hover:underline hover:font-medium" target="_blank" >
+            Redes Sociales
+        </a>
+    </div>
+</div>
+
+<footer class="py-4 text-white text-center text-wrap">
     <p class="text-gray-600">Copyright - All rights reserved</p>
 </footer>
