--- a/src/components/SpanCard.astro
+++ b/src/components/SpanCard.astro
@@ -1,4 +1,10 @@
+---
+import RightIcon from '../components/icons/right.astro';
+---
 <div class="p-8 my-5 bg-gray-800 rounded-md">
-    <h3 class="text-white font-semibold ">Portafolio dev:</h3>
+    <h3 class="text-white font-semibold flex">
+        <RightIcon class="size-5"/>
+        Portafolio dev:
+    </h3>
         <a href="https://anabelhumor.vercel.app/" target="_blank" class="text-gray-400 hover:underline">Portafolio de Anabel Huanca Moreano </a>
 </div>
