--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,31 +7,28 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="author" content="anabelHumor">
-		<meta name="description" content="Portafolio WordPress" />
+		<meta name="author" content="Anabel Huanca">
+		<meta name="description" content="Portafolio WordPress anabelhumor" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/perfil.png" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="robots" content="index, follow">
 	<!-- OPEN GRAPH -->
 	<meta property="og:title" content="Portafolio WordPress - Anabel Huanca Moreano @anabelhumor">
-<!-- 	<meta property="og:image" content="/portafolio.JPG">
-	<meta property="og:image:alt" content="Una captura de mi portafolio"> -->
+	<meta property="og:image" content="/captura.jpg">
+	<meta property="og:image:alt" content="Una captura de mi portafolio WP">
 
 		<title>{title}</title>
 	</head>
 	<body>
-		
 		<slot />
 	</body>
 </html>
 <style is:global>
-	:root{
-		theme: light dark;
-	}
+
 	html {
 		font-family: system-ui, sans-serif;
 	}
@@ -41,7 +38,6 @@ const { title } = Astro.props;
 		flex-direction: column;
 		height: 100vh;
 		background-color: #00091d;
-		
 	}
 
 </style>
