--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
 		<meta name="author" content="Anabel Huanca">
 		<meta name="description" content="Portafolio WordPress anabelhumor" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/perfil.png" />
+		<link rel="icon" type="image/svg+xml" href="/perfil.jpg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="robots" content="index, follow">
 	<!-- OPEN GRAPH -->
