--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,3 +3,33 @@ alt="img-banner"
 class="h-48 w-full object-cover">
 
 <h1 class="text-white font-bold text-3xl my-5">Hola mundo! Soy Anabel Huanca Moreano 👋</h1>
+
+
+<style>
+    .topBlur {
+    position: absolute;
+    width: 40vw;
+    height: 30vw;
+    min-width: 350px;
+    min-width: 350px;
+    top: -128px;
+    left: -10vw;
+    border-radius: 764px;
+    background: rgba(25, 55, 109, 0.7);
+    filter: blur(100px);
+    z-index: 0;
+    }
+
+.bottomBlur {
+  position: absolute;
+  width: 55vw;
+  height: 30vw;
+  min-width: 250px;
+  min-width: 150px;
+  top: 246px;
+  border-radius: 764px;
+  background: rgba(25, 55, 109, 0.7);
+  filter: blur(100px);
+  z-index: 0;
+}
+</style>
