--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ const { title } = Astro.props;
 		display: flex;
 		flex-direction: column;
 		height: 100vh;
-		background-color: #00091d;
+		background-color: #10131b;
 	}
 
 </style>
